samples/_failures_safe/1761624168_731e9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5cf3bf4f.c: In function ‘main’:
./samples/SAFE/__tmp_5cf3bf4f.c:148:5: error: expected declaration or statement at end of input
  148 |     printf("\nResult matrix:\n");
      |     ^~~~~~
